# surfrecipes

./: .env-example  .gitignore  Dockerfile  README.md  RecipeFinderTool.py  agent.py  agent.yaml  prompt_to_return_action.py  pyproject.toml
recipefinder/: agent.py  server.py  tool.py
surfrecipes/: agent.py  prompt_to_analyze_requirements.py  prompts.py  server.py  tool.py
