
[tool.poetry]
name = "SurfRecipes"
version = "0.1.0"
description = "AI agent for An AI agent that understands your requirements and finds suitable recipes"
authors = ["Tapa Dipti Sitaula <tapadipti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "surfrecipes"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.3"
requests = "^2.31.0"
fastapi = {version = "^0.109", extras = ["all"]}
surfkit = "^0.1.275"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
